# obd

./: .dockerignore  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
.github/workflows/: ci.yml  fetch-dtc-codes.yml  release.yml
assets/: Info.plist  installer.iss  obd-dashboard.desktop
dtc_codes/: _generic.json  acura.json  alfa romeo.json  audi.json  bmw.json  chevrolet.json  chrysler.json  dodge.json  fiat.json  ford.json  honda.json  hyundai.json  isuzu.json  jaguar.json  jeep.json  kia.json  lamborghini.json  land rover.json  lexus.json  lincoln.json  mazda.json  mercedes-benz.json  mercury.json  mini.json  mitsubishi.json  nissan.json  opel.json  peugeot.json  porsche.json  saab.json  saturn.json  subaru.json  suzuki.json  toyota.json  volkswagen.json  volvo.json
scripts/: fetch_dtc_codes.js  package.json
src/: app.rs  dtc_database.rs  dtc_descriptions.rs  elm327.rs  gauges.rs  lib.rs  main.rs  obd.rs  obd.ts  obd_ops.rs  vin_decoder.rs  web_serial.rs
