[package]
name = "obd-dashboard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Real-time OBD-II diagnostic dashboard with ELM327 support, built with egui"
license = "MIT"
repository = "https://github.com/kierandrewett/obd"
homepage = "https://github.com/kierandrewett/obd"
readme = "README.md"
keywords = ["obd", "obd2", "elm327", "automotive", "diagnostics"]
categories = ["gui", "hardware-support"]

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
serialport = "4.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 2
lto = true
strip = true
