[package]
name = "obd-dashboard"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Real-time OBD-II diagnostic dashboard with ELM327 support, built with egui"
license = "MIT"
repository = "https://github.com/kierandrewett/obd"
homepage = "https://github.com/kierandrewett/obd"
readme = "README.md"
keywords = ["obd", "obd2", "elm327", "automotive", "diagnostics"]
categories = ["gui", "hardware-support"]

[lib]
name = "obd_dashboard"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "obd-dashboard"
path = "src/main.rs"

[[bin]]
name = "obd-emulator"
path = "src/bin/emulator.rs"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = "0.31"
tracing = "0.1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serialport = "4.7"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
libc = "0.2"
tungstenite = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "console",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "WritableStream",
    "WritableStreamDefaultWriter",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
] }
gloo-timers = { version = "0.3", features = ["futures"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"

[package.metadata.deb]
section = "utils"
depends = "libudev1"
assets = [
    { source = "target/release/obd-dashboard", dest = "usr/bin/", mode = "755" },
    { source = "assets/obd-dashboard.desktop", dest = "usr/share/applications/", mode = "644" },
    { source = "assets/obd-dashboard.svg", dest = "usr/share/icons/hicolor/scalable/apps/", mode = "644" },
]

[[package.metadata.generate-rpm.assets]]
source = "target/release/obd-dashboard"
dest = "/usr/bin/obd-dashboard"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "assets/obd-dashboard.desktop"
dest = "/usr/share/applications/obd-dashboard.desktop"
mode = "644"

[[package.metadata.generate-rpm.assets]]
source = "assets/obd-dashboard.svg"
dest = "/usr/share/icons/hicolor/scalable/apps/obd-dashboard.svg"
mode = "644"

[profile.release]
opt-level = 2
lto = true
strip = true
